# NastyTetris

./: '  .gitignore  CMakeLists.txt  Info.plist  LICENSE  README.md  ecsExample.md  game.cpp  goals.md  mingw_toolchain.cmake  notes.md
src/: Scores.txt
src/Classes/: LTexture.cpp  LTexture.h
src/Components/: AudioComponent.h  BoundaryComponent.h  BoxColliderComponent.h  HoldComponent.h  MoveComponent.h  RowComponent.h  ScoreComponent.h  TetrisGravityComponent.h  TextureComponent.h  TransformComponent.h
src/Components/Buttons/: ButtonComponent.h  StateChangerButton.cpp  StateChangerButton.h
src/Core/: ECS.h  Timer.h  Utility.cpp  Utility.h  Vector2.h
src/Shapes/: LShape.cpp  LShape.h  LineShape.cpp  LineShape.h  ReverseLShape.cpp  ReverseLShape.h  ReverseZShape.cpp  ReverseZShape.h  Shape.h  SquareShape.cpp  SquareShape.h  TShape.cpp  TShape.h  ZShape.cpp  ZShape.h
src/States/: PlayState.cpp  PlayState.h  ScoreState.cpp  ScoreState.h  State.h  TitleState.cpp  TitleState.h
src/Systems/: AudioSystem.cpp  AudioSystem.h  CollisionSystem.cpp  CollisionSystem.h  HoldSystem.cpp  HoldSystem.h  MouseButtonSystem.cpp  MouseButtonSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayShapeSystem.cpp  PlayShapeSystem.h  PlayerCollisionSystem.cpp  PlayerCollisionSystem.h  PlayerEventSystem.cpp  PlayerEventSystem.h  RenderSystem.cpp  RenderSystem.h  RowSystem.cpp  RowSystem.h  ScoreSystem.cpp  ScoreSystem.h  ShapeSystem.cpp  ShapeSystem.h  TextEventSystem.cpp  TextEventSystem.h
